src/app/(main)/_css/main.css
@property --gutter-top {
  syntax: "<length>";
  inherits: true;
  initial-value: 0;
}

@property --gutter-bottom {
  syntax: "<length>";
  inherits: true;
  initial-value: 0;
}

@property --gutter-left {
  syntax: "<length>";
  inherits: true;
  initial-value: 0;
}

@property --gutter-right {
  syntax: "<length>";
  inherits: true;
  initial-value: 0;
}

:root {
  --tw-logo-globe--animation-duration: 30s;

  --z-ui: 1000;
  --z-ui-player: 1001;
  --z-dialog: 10000;
}

